# dante-cli-win-oficial

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ENTREGAVEIS.md  INSTALL.md  README.md
.github/workflows/: windows-build.yml
cmake/: DanteCompileOptions.cmake  DanteVersion.cmake
installer/: manifest_windows.json
installer/bootstrap/: dante_app.c  dante_cli_bootstrap.c  dante_cli_bootstrap.manifest  dante_cli_bootstrap.rc
installer/inno/: dante-cli.iss
installer/nsis/: dante-cli.nsi
resources/themes/: dark.qss
resources/translations/: dante_en.ts  dante_pt_BR.ts
scripts/: build.ps1  bump-version.sh  import-icon.py  make-icon.py  make-installer.ps1  make-wizard-images.py  rebuild-installer.sh
src/app/: CMakeLists.txt  app.rc  main.cpp
src/core/: CMakeLists.txt
src/core/domain/: AIProvider.h  Credential.h  Favorite.h  Session.cpp  Session.h  Snippet.h  SplitWorkspace.cpp  SplitWorkspace.h  Tab.cpp  Tab.h
src/core/parsing/: AnsiParser.cpp  AnsiParser.h  AnsiTypes.h
src/core/services/: IShellLauncher.h  ITabRepository.h
src/core/util/: Logger.cpp  Logger.h  Result.h  Uuid.h
src/persistence/: CMakeLists.txt
src/persistence/config/: AppConfig.cpp  AppConfig.h
src/persistence/repository/: Database.cpp  Database.h  SqliteTabRepository.cpp  SqliteTabRepository.h
src/persistence/schema/: 001_initial.sql  Migrations.cpp  Migrations.h
src/platform/: CMakeLists.txt
src/platform/fs/: PathUtils.cpp  PathUtils.h
src/platform/memstat/: ProcessStats.cpp  ProcessStats.h
src/platform/process/: ShellResolver.cpp  ShellResolver.h
src/platform/pty/: IPtyBackend.h  PtyEvents.h
src/platform/pty/conpty/: ConPtyBackend.cpp  ConPtyBackend.h  WindowsHandle.h
src/terminal/: CMakeLists.txt
src/terminal/engine/: ColorPalette.cpp  ColorPalette.h  Scrollback.cpp  Scrollback.h  TerminalBuffer.cpp  TerminalBuffer.h
src/terminal/registry/: TerminalRegistry.cpp  TerminalRegistry.h
src/terminal/widget/: TerminalWidget.cpp  TerminalWidget.h
src/ui/: CMakeLists.txt
src/ui/main_window/: MainWindow.cpp  MainWindow.h
src/ui/settings/: SettingsDialog.cpp  SettingsDialog.h
src/ui/sidebar/: SidebarDock.cpp  SidebarDock.h
src/ui/tabs/: TabBar.cpp  TabBar.h
src/ui/toolbar/: ToolbarWidget.cpp  ToolbarWidget.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_ansi_parser.cpp  test_terminal_buffer.cpp
